// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyAdvisoryList Should match the snapshot 1`] = `
<EmptyState
  variant="full"
>
  <Title
    headingLevel="h5"
    size="lg"
  >
    No matching advisories found
  </Title>
  <EmptyStateBody>
    To continue, edit your filter settings and search again.
  </EmptyStateBody>
</EmptyState>
`;

exports[`EmptyPackagesList Should match the snapshot 1`] = `
<EmptyState
  variant="full"
>
  <EmptyStateIcon
    icon={[Function]}
  />
  <Title
    headingLevel="h5"
    size="lg"
  >
    No matching packages found
  </Title>
  <EmptyStateBody>
    To continue, edit your filter settings and search again.
  </EmptyStateBody>
</EmptyState>
`;
